--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./images/iconmonstr-idea-16.svg" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
